--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FshAngular</title>
+  <title>Full Stack Hero</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link type="image/png" rel="icon" href="asserts/logo.png"/>
+  <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
   <app-root></app-root>
