--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Full Stack Hero</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="image/png" rel="icon" href="asserts/logo.png"/>
+  <link type="image/png" rel="icon" href="assets/logo.png"/>
   <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
